# q2ns

./: .gitignore  .zenodo.json  CITATION.cff  CMakeLists.txt  LICENSE  README.md  zenodo.json
.doxygen/: Doxyfile
.doxygen/css/: custom.css
.doxygen/js/: site-custom.js
.github/workflows/: docs.yml
doc/: q2ns-doc.h
doc/design-notes/: architecture.md  randomness.md
doc/tutorials/: tutorial-00-index.md  tutorial-00.md  tutorial-01.md  tutorial-02.md  tutorial-03.md  tutorial-04.md
examples/: CMakeLists.txt  q2ns-1-basics-example.cc  q2ns-1-bell-send-example.cc  q2ns-2-basis-measurement-example.cc  q2ns-2-fidelity-example.cc  q2ns-2-qmap-example.cc  q2ns-3-classical-comms-example.cc  q2ns-3-teleportation-basic-example.cc  q2ns-3-teleportation-comms-example.cc  q2ns-4-multipartite-scaling-example.cc  q2ns-5-noisy-teleportation-advanced-example.cc  q2ns-5-noisy-teleportation-example.cc  q2nsviz-entanglement-distribution-example.cc  q2nsviz-ghz-distribution-example.cc  q2nsviz-graphstate-gen-example.cc  q2nsviz-teleportation-example.cc
examples/example_traces/: q2nsviz-entanglement-distribution-example.json  q2nsviz-ghz-distribution-example.json  q2nsviz-graphstate-gen-example.json  q2nsviz-teleportation-example.json
helper/: q2ns-classical-network-builder.cc  q2ns-classical-network-builder.h  q2ns-congestion-helper.cc  q2ns-congestion-helper.h  q2ns-swap-helper.cc  q2ns-swap-helper.h  q2ns-teleportation-helper.cc  q2ns-teleportation-helper.h
model/: q2ns-analysis.cc  q2ns-analysis.h  q2ns-netcontroller.cc  q2ns-netcontroller.h  q2ns-qchannel.cc  q2ns-qchannel.h  q2ns-qgate.h  q2ns-qmap.cc  q2ns-qmap.h  q2ns-qnet-device.cc  q2ns-qnet-device.h  q2ns-qnetworker.cc  q2ns-qnetworker.h  q2ns-qnode.cc  q2ns-qnode.h  q2ns-qprocessor.cc  q2ns-qprocessor.h  q2ns-qstate-all.h  q2ns-qstate-dm.cc  q2ns-qstate-dm.h  q2ns-qstate-ket.cc  q2ns-qstate-ket.h  q2ns-qstate-registry.cc  q2ns-qstate-registry.h  q2ns-qstate-stab.cc  q2ns-qstate-stab.h  q2ns-qstate.cc  q2ns-qstate.h  q2ns-qubit.cc  q2ns-qubit.h  q2ns-swap-app.cc  q2ns-swap-app.h  q2ns-teleportation-app.cc  q2ns-teleportation-app.h  q2ns-types.h  q2nsviz-trace-writer.h  q2nsviz-trace.h
test/: q2ns-analysis-test-suite.cc  q2ns-netcontroller-test-suite.cc  q2ns-qchannel-test-suite.cc  q2ns-qnode-test-suite.cc  q2ns-qstate-interface-test-suite.cc  q2ns-qstate-registry-test-suite.cc  test_runner.cc
tools/q2nsviz/: q2nsviz-serve.sh  viewer.html
